# okay-color-names

./: README.md  pyproject.toml
src/okay_color_names/: __main__.py  color.py
